solo falta editar alertas

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,11 +26,11 @@
 <footer>
   <div class="container">
     <ul>
-      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-google"></i></a></li>
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+      <li><a target="_blank" href="https://www.facebook.com/LegalGlobalConsultingSC/"><i class="fa fa-facebook"></i></a></li>
+      <li><a target="_blank" href="https://twitter.com/LegalGlobalC"><i class="fa fa-twitter"></i></a></li>
+      <li><a target="_blank" href="https://www.youtube.com/channel/UCS4ASUoxgi8gcVw1aOV_iOw/videos"><i class="fa fa-youtube"></i></a></li>
+      <li><a target="_blank" href="https://legalglobalconsulting.com"><i class="fa fa-globe"></i></a></li>
     </ul>
-    <p>Copyright © Legal Global Consulting All Right Reserved</p>
+    <p>Legal Global Consulting S.C</p>
   </div>
 </footer>
