--- a/src/app/members/settings/settings.page.html
+++ b/src/app/members/settings/settings.page.html
@@ -10,79 +10,13 @@
         <main class="margin mt-0">
   
          
+          
             <div class="container">
 
                 <form id="settingsForm">
 
                     <div class="form-divider"></div>
-                    <div class="form-label-divider"><span class="font-redlgc">Avisos de Contratos </span></div>
-                    <div class="form-divider"></div>
-
-                    <div class="list-box">
-                        <div class="list-item">
-                          
-                            <span class="list-item-title">Cambio de estatus</span>
-
-                            <div class="sweet-check {{cambioStatus}}" (click)="changeStatus('cambioStatus',$event)">
-                                <input type="checkbox" name="status" id="status" value="1">
-                                <div class="outline">
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list-box" >
-                        <div class="list-item">
-                          
-                            <span class="list-item-title">Renovaciones</span>
-
-                            <div class="sweet-check {{renovaciones}}" (click)="changeStatus('renovaciones',$event)">
-                                <input type="checkbox" name="renovaciones" id="renovaciones" value="1">
-                                <div class="outline">
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list-box">
-                        <div class="list-item">
-                          
-                            <span class="list-item-title">Seguimiento del Servicio</span>
-
-                            <div class="sweet-check {{seguimiento}}" (click)="changeStatus('seguimiento',$event)">
-                                <input type="checkbox" name="seguimiento" id="seguimiento" value="1">
-                                <div class="outline">
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list-box">
-                        <div class="list-item">
-                          
-                            <span class="list-item-title">Reclamaciones</span>
-
-                            <div class="sweet-check {{reclamaciones}}" (click)="changeStatus('reclamaciones',$event)">
-                                <input type="checkbox" name="reclamaciones" id="reclamaciones" value="1">
-                                <div class="outline">
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                
-
-
-                </form>
-
-            </div>
-            <div class="container">
-
-                <form id="settingsForm">
-
-                    <div class="form-divider"></div>
-                    <div class="form-label-divider"><span>Notificaciones </span></div>
+                    <div class="form-label-divider"><span class="font-redlgc">Notificaciones </span></div>
                     <div class="form-divider"></div>
 
                     <div class="list-box">
