--- a/src/app/members/dashboardinmobiliaria/dashboardinmobiliaria.page.html
+++ b/src/app/members/dashboardinmobiliaria/dashboardinmobiliaria.page.html
@@ -13,7 +13,7 @@
             <div class="dash-content relative">
               <h3 class="w-text">Inmobiliaria</h3>
               <div class="notification">
-                  <a href="javascript:void(0)" [routerLink]="['/members/crear-solicitud','inmo',inmobiliaria]"><i class="fa fa-plus"></i></a>
+                  <a href="javascript:void(0)" [routerLink]="['/members/crear-solicitud','inmobiliaria',inmobiliaria]"><i class="fa fa-plus"></i></a>
               </div>
             </div>
            
@@ -79,7 +79,7 @@
           <div class="form-divider"></div>
           <section class="container">
             <div class="form-row">
-              <a [routerLink]="['/members/crear-solicitud','inmo',inmobiliaria]" style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" class="button circle block">(+)  Solicitud Contrato  </a>
+              <a [routerLink]="['/members/crear-solicitud','inmobiliaria',inmobiliaria]" style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" class="button circle block">Solicitud Nueva Protección Jurídica  </a>
              </div>
           </section>
           <div class="form-divider"></div>
@@ -102,7 +102,7 @@
                   <div class="content-item active" id="contentFirmadasInmo">
   
                       <ul *ngIf="firmadas?.length != 0" class="transaction-list list-unstyled">
-                        <li *ngFor="let poliza of firmadas" routerLink="/members/poliza/{{poliza.id}}" style="cursor:pointer" >
+                        <li *ngFor="let poliza of firmadas" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" style="cursor:pointer" >
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                               <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -131,7 +131,7 @@
                     <div class="content-item" id="contentProcesoInmo">
       
                       <ul *ngIf="proceso?.length != 0" class="transaction-list list-unstyled">
-                        <li *ngFor="let poliza of proceso" routerLink="/members/poliza/{{poliza.id}}" >
+                        <li *ngFor="let poliza of proceso" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                               <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -159,7 +159,7 @@
                     </div>
                     <div class="content-item" id="contentRechazadasInmo">                      
                       <ul *ngIf="rechazadas?.length != 0" class="transaction-list list-unstyled">
-                        <li *ngFor="let poliza of rechazadas" routerLink="/members/poliza/{{poliza.id}}" >
+                        <li *ngFor="let poliza of rechazadas" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                               <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -187,7 +187,7 @@
                     </div>
                 <div class="content-item" id="contentFirmarInmo">  
                   <ul *ngIf="xfirmar?.length != 0" class="transaction-list list-unstyled">
-                    <li *ngFor="let poliza of xfirmar" routerLink="/members/poliza/{{poliza.id}}" >
+                    <li *ngFor="let poliza of xfirmar" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                           <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -215,7 +215,7 @@
                 </div>
                 <div class="content-item" id="contentRenovarInmo">  
                   <ul *ngIf="renovar?.length != 0" class="transaction-list list-unstyled">
-                    <li *ngFor="let poliza of renovar" routerLink="/members/poliza/{{poliza.id}}" >
+                    <li *ngFor="let poliza of renovar" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                           <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -243,7 +243,7 @@
                 </div>
                 <div class="content-item" id="contentReclamosInmo">                  
                   <ul *ngIf="reclamo?.length != 0" class="transaction-list list-unstyled">
-                    <li *ngFor="let poliza of reclamo" routerLink="/members/poliza/{{poliza.id}}" >
+                    <li *ngFor="let poliza of reclamo" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                           <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
