--- a/src/app/members/dashboardpropmor/dashboardpropmor.page.html
+++ b/src/app/members/dashboardpropmor/dashboardpropmor.page.html
@@ -80,7 +80,7 @@
           <div class="form-divider"></div>
           <section class="container">
             <div class="form-row">
-              <a [routerLink]="['/members/crear-solicitud','propmor',propmor]" style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" class="button circle block">(+) Solicitud Contrato </a>
+              <a [routerLink]="['/members/crear-solicitud','propmor',propmor]" style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" class="button circle block">Solicitud Nueva Protección Jurídica </a>
              </div>
           </section>
           <section class="container">
@@ -102,7 +102,7 @@
                   <div class="content-item active" id="contentFirmadasPropmor">
   
                       <ul *ngIf="firmadas?.length != 0" class="transaction-list list-unstyled">
-                        <li *ngFor="let poliza of firmadas" routerLink="/members/poliza/{{poliza.id}}" style="cursor:pointer" >
+                        <li *ngFor="let poliza of firmadas" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" style="cursor:pointer" >
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                               <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -131,7 +131,7 @@
                     <div class="content-item" id="contentProcesoPropmor">
       
                       <ul *ngIf="proceso?.length != 0" class="transaction-list list-unstyled">
-                        <li *ngFor="let poliza of proceso" routerLink="/members/poliza/{{poliza.id}}" >
+                        <li *ngFor="let poliza of proceso" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                               <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -159,7 +159,7 @@
                     </div>
                     <div class="content-item" id="contentRechazadasPropmor">                      
                       <ul *ngIf="rechazadas?.length != 0" class="transaction-list list-unstyled">
-                        <li *ngFor="let poliza of rechazadas" routerLink="/members/poliza/{{poliza.id}}" >
+                        <li *ngFor="let poliza of rechazadas" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                               <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -187,7 +187,7 @@
                     </div>
                 <div class="content-item" id="contentFirmarPropmor">  
                   <ul *ngIf="xfirmar?.length != 0" class="transaction-list list-unstyled">
-                    <li *ngFor="let poliza of xfirmar" routerLink="/members/poliza/{{poliza.id}}" >
+                    <li *ngFor="let poliza of xfirmar" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                           <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -215,7 +215,7 @@
                 </div>
                 <div class="content-item" id="contentRenovarPropmor">  
                   <ul *ngIf="renovar?.length != 0" class="transaction-list list-unstyled">
-                    <li *ngFor="let poliza of renovar" routerLink="/members/poliza/{{poliza.id}}" >
+                    <li *ngFor="let poliza of renovar" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                           <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
@@ -243,7 +243,7 @@
                 </div>
                 <div class="content-item" id="contentReclamosPropmor">                  
                   <ul *ngIf="reclamo?.length != 0" class="transaction-list list-unstyled">
-                    <li *ngFor="let poliza of reclamo" routerLink="/members/poliza/{{poliza.id}}" >
+                    <li *ngFor="let poliza of reclamo" routerLink="/members/poliza/{{perfil}}/{{poliza.id}}" >
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
                           <img class="img-xs" src="assets/img/inmueble.png" alt="coin image">
