--- a/src/app/notificacion/notificacion.page.html
+++ b/src/app/notificacion/notificacion.page.html
@@ -6,7 +6,7 @@
         <app-menu></app-menu>
         <app-quickmenu title="NOTIFICACIÓN"></app-quickmenu>
       <!-- Page content start -->
-      <main class="margin mt-0">
+      <main class=" mt-0">
 
           <!-- <div class="dash-balance">
             <div class="dash-content relative">
@@ -14,7 +14,7 @@
            
             </div>
           </div> -->
-          <div class="form-divider"></div>
+          
          
          
           <div style="padding: 20px" class="news-list-item no-image">
